--- a/app/src/main/res/layout/fragment_save_single_game.xml
+++ b/app/src/main/res/layout/fragment_save_single_game.xml
@@ -135,131 +135,199 @@
         <TextView
             android:id="@+id/playerNameTitle"
             style="@style/HeaderTextViewStyle"
+            android:background="@drawable/header_layout"
             android:layout_marginTop="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:text="@string/playerNamesAndScoresTitle"
-            android:visibility="invisible"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardView"
             app:drawableStartCompat="@drawable/ic_player" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/player1Name"
-            style="@style/NameTextInputLayoutStyle"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/playerNamesAndScoresLayout"
+            android:background="@drawable/score_layout"
+            android:visibility="gone"
             android:layout_marginStart="8dp"
-            android:visibility="invisible"
-            app:boxStrokeWidth="0dp"
-            app:layout_constraintEnd_toStartOf="@+id/scoreColumnDivider"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/playerNameTitle">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/player1TotalScore"
-                style="@style/ScoreTextInputEditTextStyle"
-                android:focusable="false"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/scoreColumnDivider"
-            style="@style/DividerStyle"
-            android:layout_width="0.3dp"
-            android:layout_height="30dp"
-            android:layout_margin="8dp"
-            android:visibility="invisible"
-            app:layout_constraintEnd_toStartOf="@id/player2Name"
-            app:layout_constraintBottom_toBottomOf="@id/player4Name"
-            app:layout_constraintStart_toEndOf="@id/player1Name"
-            app:layout_constraintTop_toBottomOf="@+id/playerNameTitle" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/player2Name"
-            style="@style/NameTextInputLayoutStyle"
-            android:visibility="invisible"
-            app:boxStrokeWidth="0dp"
-            app:layout_constraintEnd_toEndOf="@id/scoreColumnDivider2"
-            app:layout_constraintStart_toEndOf="@+id/scoreColumnDivider"
-            app:layout_constraintTop_toBottomOf="@+id/playerNameTitle">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/player2TotalScore"
-                style="@style/ScoreTextInputEditTextStyle"
-                android:focusable="false"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/scoreColumnDivider2"
-            style="@style/DividerStyle"
-            android:layout_width="0.3dp"
-            android:layout_height="30dp"
-            android:layout_margin="8dp"
-            android:layout_marginBottom="44dp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toTopOf="@+id/roundScoreTitle"
-            app:layout_constraintEnd_toStartOf="@id/player3Name"
-            app:layout_constraintStart_toEndOf="@id/player2Name"
-            app:layout_constraintTop_toBottomOf="@+id/playerNameTitle" />
-
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/player3Name"
-            style="@style/NameTextInputLayoutStyle"
-            android:visibility="invisible"
-            app:boxStrokeWidth="0dp"
-            app:layout_constraintEnd_toStartOf="@id/scoreColumnDivider3"
-            app:layout_constraintStart_toEndOf="@id/scoreColumnDivider2"
-            app:layout_constraintTop_toBottomOf="@+id/playerNameTitle">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/player3TotalScore"
-                style="@style/ScoreTextInputEditTextStyle"
-                android:focusable="false"/>
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.divider.MaterialDivider
-            android:id="@+id/scoreColumnDivider3"
-            style="@style/DividerStyle"
-            android:layout_width="0.3dp"
-            android:layout_height="30dp"
-            android:layout_margin="8dp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="@id/player4Name"
-            app:layout_constraintTop_toBottomOf="@+id/playerNameTitle"
-            app:layout_constraintEnd_toStartOf="@id/player4Name"
-            app:layout_constraintStart_toEndOf="@id/player3Name" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/player4Name"
-            style="@style/NameTextInputLayoutStyle"
-            android:visibility="invisible"
-            app:boxStrokeWidth="0dp"
             android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/scoreColumnDivider3"
-            app:layout_constraintTop_toBottomOf="@+id/playerNameTitle">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/playerNameTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <TextView
+                android:id="@+id/roundCount"
+                android:layout_width="30dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingStart="8dp"
+                android:paddingTop="8dp"
+                android:paddingEnd="8dp"
+                android:paddingBottom="8dp"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/player1Name"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/player1Name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toEndOf="@+id/roundCount"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/verticalDivider1" />
+
+            <com.google.android.material.divider.MaterialDivider
+                android:id="@+id/verticalDivider1"
+                style="@style/DividerStyle"
+                android:layout_width="0.3dp"
+                android:layout_height="30dp"
+                android:layout_margin="4dp"
+                android:layout_gravity="center_vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/player2Name"
+                app:layout_constraintStart_toEndOf="@+id/player1Name"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/player1TotalScore"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
+                android:gravity="center"
+                android:maxLength="5"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/verticalDivider1"
+                app:layout_constraintStart_toEndOf="@+id/roundCount"
+                app:layout_constraintTop_toBottomOf="@+id/player1Name" />
+
+            <TextView
+                android:id="@+id/player2Name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toEndOf="@+id/verticalDivider1"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/verticalDivider2" />
+
+            <com.google.android.material.divider.MaterialDivider
+                android:id="@+id/verticalDivider2"
+                style="@style/DividerStyle"
+                android:layout_width="0.3dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center_vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/player3Name"
+                app:layout_constraintStart_toEndOf="@+id/player2Name"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/player2TotalScore"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
+                android:gravity="center"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/verticalDivider2"
+                app:layout_constraintStart_toEndOf="@+id/verticalDivider1"
+                app:layout_constraintTop_toBottomOf="@+id/player2Name" />
+
+
+            <TextView
+                android:id="@+id/player3Name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@+id/verticalDivider3"
+                app:layout_constraintStart_toEndOf="@+id/verticalDivider2"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.divider.MaterialDivider
+                android:id="@+id/verticalDivider3"
+                style="@style/DividerStyle"
+                android:layout_width="0.3dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center_vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/player4Name"
+                app:layout_constraintStart_toEndOf="@+id/player3Name"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/player3TotalScore"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
+                android:gravity="center"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/verticalDivider3"
+                app:layout_constraintStart_toEndOf="@+id/verticalDivider2"
+                app:layout_constraintTop_toBottomOf="@+id/player3Name" />
+
+            <TextView
+                android:id="@+id/player4Name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/verticalDivider3"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
                 android:id="@+id/player4TotalScore"
-                style="@style/ScoreTextInputEditTextStyle"
-                android:focusable="false"/>
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
+                android:gravity="center"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/verticalDivider3"
+                app:layout_constraintTop_toBottomOf="@+id/player4Name" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
             android:id="@+id/roundScoreTitle"
             style="@style/HeaderTextViewStyle"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/header_layout"
             android:text="@string/teamScoresTitle"
-            android:visibility="invisible"
+            android:textStyle="bold"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/player4Name"
+            app:layout_constraintTop_toBottomOf="@id/playerNamesAndScoresLayout"
             app:drawableLeftCompat="@drawable/ic_scoreboard" />
 
         <LinearLayout
             android:id="@+id/scoreLayout"
+            android:background="@drawable/score_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:orientation="vertical"
-            android:visibility="invisible"
+            android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@id/roundScoreTitle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
